--- a/public/css/workspace.css
+++ b/public/css/workspace.css
@@ -187,3 +187,54 @@ body{
 .new-card:hover{
     color: #dadade;
 }
+.chat-input{
+    background: red;
+    width: 100%;
+    height: 40px;
+}
+.popup-modal{
+    background: rgba(0,0,0,0.5);
+    width: 100%;
+    height: 100%;
+    display: none;
+    z-index: 50;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+.popup-content{
+    text-align: center;
+    background: #fff;
+    width: 30%;
+    /* height: 45%; */
+    /* display: block; */
+    position: relative;
+    top: 20%;
+    margin: 0 auto;
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: rgba(0,0,0,0.5) 0px 0px 50px 4px;
+}
+h4{
+    color: #000;
+    font-weight: bold;
+}
+.close-button{
+    position: absolute;
+    top: 15px;
+    right: 25px;
+    font-size: 20px;
+    cursor: pointer;
+    color: #000;
+}
+.popup-form{
+    padding: 0px 10px;
+    text-align: left;
+    color:#000;
+}
+.popup-footer{
+    /* float: right; */
+    position: relative;
+    display: contents;
+    text-align: right;
+}
