--- a/public/css/workspace.css
+++ b/public/css/workspace.css
@@ -238,3 +238,17 @@ h4{
     display: contents;
     text-align: right;
 }
+.popup-panel-title{
+    font-size: 16px;
+    margin: 0px 0px 10px 0px;
+}
+.popup-panel-content{
+    padding-left: 20px;
+    font-size: 12px;
+}
+.btn-custom{
+    padding: 2px 7px;
+}
+.form-update{
+    cursor: text !important;
+}
