--- a/public/css/workspace.css
+++ b/public/css/workspace.css
@@ -187,11 +187,6 @@ body{
 .new-card:hover{
     color: #dadade;
 }
-.chat-input{
-    background: red;
-    width: 100%;
-    height: 40px;
-}
 .popup-modal{
     background: rgba(0,0,0,0.5);
     width: 100%;
@@ -251,4 +246,39 @@ h4{
 }
 .form-update{
     cursor: text !important;
+}
+.chat-box{
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    height: 80px;
+    left: 0px;
+    background: #dadade;
+    padding: 2px;
+    margin-bottom: 10px;
+}
+.container-chat{
+    border: 2px solid #f7f7f7;
+    height: 95%; 
+    width: 99%; 
+    position: relative;
+}
+.chat-input{
+    width: 100%;
+    height: 50%;
+    margin-bottom: 5px;
+    padding: 5px;
+}
+.chat-body{
+    width: 100%;
+    height: 85%;
+    position: relative;
+    margin-top: 15px;
+    /*background: red;*/
+    overflow-y: scroll;
+}
+.user-settings{
+    width: 60%;
+    /*position: relative;*/
+    margin-left: 20px;
 }
