--- a/public/css/workspace.css
+++ b/public/css/workspace.css
@@ -378,3 +378,21 @@ h4{
     font-weight:bold;
     margin-left: 2px;
 }
+.upload-image{
+    height: 100px;
+    width: 100px;
+    border-radius: 5px;
+    border: 1px solid #dadade;
+    padding: 5px;
+    text-align: center;
+    padding-top: 20px;
+    cursor: pointer;
+    display: inline-block;
+    margin: 5px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.upload-image:active{
+    box-shadow: 0px 0px 1px 1px #dadade;
+}
