--- a/public/css/workspace.css
+++ b/public/css/workspace.css
@@ -203,11 +203,12 @@ body{
     /* height: 45%; */
     /* display: block; */
     position: relative;
-    top: 20%;
+    top: 10%;
     margin: 0 auto;
     border-radius: 10px;
     padding: 10px;
     box-shadow: rgba(0,0,0,0.5) 0px 0px 50px 4px;
+    margin-bottom: 400px;
 }
 .popup-content-children{
     text-align: center;
